Fix the way to always install some distro specifics packages in `vars/` files and use those lists in addition to the global `profiles.all.packages` list :
- `locales` for Debian like distros
- `eselect-repository` for Gentoo like distros

Fix the package managers cache expiration detection :

- add a detection for the age of the ArchLinux keyring
- use `/var/cache/apt/pkgcache.bin` instead of `/var/cache/gwsys` for Debian like distros

--- a/defaults/main/packages.yml
+++ b/defaults/main/packages.yml
@@ -33,6 +33,9 @@ system_portage_video_cards: []
 #   - python3_10
 #   - python3_11
 system_portage_python_single_target: python3_11
+system_portage_ruby_targets:
+  - ruby31
+  - ruby32
 
 system_portage_binrepos:
   - name: experimental
