--- a/vars/debian-like.yml
+++ b/vars/debian-like.yml
@@ -5,17 +5,18 @@ apt_sections: "{{ system_apt_sections | default(apt_default_sections) }}"
 
 debian_release: "{{ 'testing' if ansible_distribution_release == 'n/a' else ansible_distribution_release }}"
 
+packages_update_policy:
+  files:
+    - path: /var/cache/apt/pkgcache.bin
+
 packages_upgrade_policy:
   upgrade: dist
   autoremove: true
 
-packages_update_policy:
-  marker: /var/cache/gwsys
+packages_add_by_name:
+  - locales
 
 family_packages:
-  all:
-    - acl
-    - locales
   gdm:
     - gdm3
   unattended-upgrades:
