--- a/tasks/package-managers/portage/make.conf.yml
+++ b/tasks/package-managers/portage/make.conf.yml
@@ -3,13 +3,60 @@
   ansible.builtin.import_tasks:
     file: "{{ role_path }}/tasks/package-managers/portage/equery.yml"
 
-- name: Portage - make.conf - Dependencies
+- name: Portage - make.conf - Git package
   become: true
   community.general.portage:
-    package:
-      - app-portage/cpuid2cpuflags
-      - dev-vcs/git
-    state: present
+    package: dev-vcs/git
+
+- name: Hardware support
+  when: not in_container
+  block:
+    - name: Portage - make.conf - cpuid2cpuflags tool
+      become: true
+      community.general.portage:
+        package: app-portage/cpuid2cpuflags
+
+    - name: Portage - make.conf - Get CPU flags
+      ansible.builtin.command:
+        cmd: cpuid2cpuflags
+      register: cpuid2cpuflags
+      changed_when: false
+
+    - name: Portage - make.conf - Hardware support
+      become: true
+      when: item.value | length > 0
+      ansible.builtin.lineinfile:
+        dest: /etc/portage/make.conf
+        line: '{{ item.key }}="{{ item.value }}"'
+        regexp: '^{{ item.key }}='
+        insertafter: "{{ item.insertafter | default(omit) }}"
+        insertbefore: "{{ item.insertbefore | default(omit) }}"
+        firstmatch: "{{ 'insertbefore' in item }}"
+      loop:
+        - key: COMMON_FLAGS
+          value: "{{ system_packages_build_cflags }}"
+          insertbefore: CFLAGS
+        - key: CFLAGS
+          value: ${COMMON_FLAGS}
+        - key: CXXFLAGS
+          value: ${COMMON_FLAGS}
+          insertafter: CFLAGS
+        - key: FCFLAGS
+          value: ${COMMON_FLAGS}
+          insertafter: CXXFLAGS
+        - key: FFLAGS
+          value: ${COMMON_FLAGS}
+          insertafter: FCFLAGS
+        - key: "{{ cpuid2cpuflags.stdout | split(': ') | first }}"
+          value: "{{ cpuid2cpuflags.stdout | split(': ') | last }}"
+          state: "{{ in_container | ternary('absent', 'present') }}"
+        - key: CAMERAS
+          value: "{{ system_portage_cameras | join(' ') }}"
+          state: "{{ in_container | ternary('absent', 'present') }}"
+        - key: VIDEO_CARDS
+          value: "{{ system_portage_video_cards | join(' ') }}"
+          state: "{{ in_container | ternary('absent', 'present') }}"
+      notify: emerge --newuse
 
 - name: Portage - make.conf - Get installed Python versions
   ansible.builtin.command:
@@ -17,55 +64,27 @@
   changed_when: false
   register: equery
 
-- name: Portage - make.conf - CPU Flags
-  ansible.builtin.command:
-    cmd: cpuid2cpuflags
-  register: cpuid2cpuflags
-  changed_when: false
-
-- name: Portage - make.conf
+- name: Portage - make.conf - Common settings
   become: true
   when: item.value | length > 0
-  vars:
-    value: "{{ item.value | regex_replace('\\s+', ' ') }}"
   ansible.builtin.lineinfile:
     dest: /etc/portage/make.conf
-    line: '{{ item.key }}="{{ value }}"'
+    line: '{{ item.key }}="{{ item.value }}"'
     regexp: '^{{ item.key }}='
     insertafter: "{{ item.insertafter | default(omit) }}"
     insertbefore: "{{ item.insertbefore | default(omit) }}"
     firstmatch: "{{ 'insertbefore' in item }}"
   loop:
-    - key: COMMON_FLAGS
-      value: "{{ system_packages_build_cflags }}"
-      insertbefore: CFLAGS
-    - key: CFLAGS
-      value: ${COMMON_FLAGS}
-    - key: CXXFLAGS
-      value: ${COMMON_FLAGS}
-      insertafter: CFLAGS
-    - key: FCFLAGS
-      value: ${COMMON_FLAGS}
-      insertafter: CXXFLAGS
-    - key: FFLAGS
-      value: ${COMMON_FLAGS}
-      insertafter: FCFLAGS
     - key: ACCEPT_KEYWORDS
       value: "{{ system_portage_accept_keywords | join(' ') }}"
     - key: L10N
       value: "{{ system_l10n | join(' ') }}"
     - key: EMERGE_DEFAULT_OPTS
-      value: "{{ portage_opts | join(' ') }}"
+      value: "{{ portage_opts | join(' ') | trim }}"
     - key: FEATURES
-      value: "{{ (['${FEATURES}'] + portage_features) | join(' ') }}"
+      value: "{{ (['${FEATURES}'] + portage_features) | join(' ') | regex_replace('\\s+', ' ') }}"
     - key: GENTOO_MIRRORS
       value: "{{ system_portage_gentoo_mirrors | join(' ') }}"
-    - key: "{{ cpuid2cpuflags.stdout | split(': ') | first }}"
-      value: "{{ cpuid2cpuflags.stdout | split(': ') | last }}"
-    - key: CAMERAS
-      value: "{{ system_portage_cameras | join(' ') }}"
-    - key: VIDEO_CARDS
-      value: "{{ system_portage_video_cards | join(' ') }}"
     - key: PYTHON_TARGETS
       value: |-
         {{
