--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Packages - Load facts
-  when: system_uptime is undefined
+  when: system_packages is undefined
   ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Packages - Before install
