--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,5 +1,7 @@
 ---
 - name: Converge with default settings
   hosts: all
+  vars:
+    system_manage_firewall: false
   roles:
     - role: gwerlas.system
