--- a/tasks/package-managers/portage/profile.yml
+++ b/tasks/package-managers/portage/profile.yml
@@ -25,8 +25,8 @@
     src: |-
       {{
         '../..' + system_portage_directory +
-        '/profiles/default/linux/amd64/17.1/no-multilib' +
-        ('/systemd/merged-usr' if ansible_service_mgr == 'systemd' else '')
+        '/profiles/default/linux/amd64/23.0/no-multilib' +
+        ('/systemd' if ansible_service_mgr == 'systemd' else '')
       }}
     dest: /etc/portage/make.profile
     state: link
