--- a/molecule/desktops/molecule.yml
+++ b/molecule/desktops/molecule.yml
@@ -38,43 +38,29 @@ platforms:
       - 'vm.disk :disk, size: "1GB", name: "vdb"'
 
   # Debian like
-  - name: debian12
+  - name: bookworm
     box: debian/bookworm64
     interfaces: *interfaces
     provider_raw_config_args: *provider
     instance_raw_config_args: *instance
-  - name: ubuntu2310
-    box: generic/ubuntu2310
+  - name: noble
+    box: generic/ubuntu2404
     memory: 2048
     interfaces: *interfaces
     provider_raw_config_args: *provider
     instance_raw_config_args: *instance
 
   # RedHat like
-  - name: centos8s
-    box: generic/centos8s
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
   - name: centos9s
     box: generic/centos9s
     memory: 2048
     interfaces: *interfaces
     provider_raw_config_args: *provider
     instance_raw_config_args: *instance
-  - name: fedora38
-    box: fedora/38-cloud-base
+  - name: fedora40
+    box: fedora/40-cloud-base
     memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: fedora39
-    box: fedora/39-cloud-base
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
+    provider_raw_config_args: *raw_config
 lint: ansible-lint
 provisioner:
   name: ansible
