--- a/molecule/servers/molecule.yml
+++ b/molecule/servers/molecule.yml
@@ -1,126 +1,1 @@
----
-dependency:
-  name: galaxy
-driver:
-  name: vagrant
-  provider:
-    name: libvirt
-  provision: true
-platforms:
-  - name: archlinux
-    box: archlinux/archlinux
-    interfaces: &interfaces
-      - auto_config: false
-        network_name: private_network
-        type: dhcp
-    provider_raw_config_args: &provider
-      - "cpu_mode = 'host-passthrough'"
-      - "disk_bus = 'virtio'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args:
-      - 'vm.disk :disk, size: "1GB", name: "vdb"'
-      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
-  - name: gentoo
-    box: generic/gentoo
-    cpus: 4
-    memory: 8192
-    interfaces: *interfaces
-    provider_raw_config_args:
-      - "cpu_mode = 'host-passthrough'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args: &instance
-      - 'vm.disk :disk, size: "1GB", name: "vdb"'
-
-  # Debian like
-  - name: debian10
-    box: debian/buster64
-    groups:
-      - debian
-      - debian_like
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: debian11
-    box: debian/bullseye64
-    groups:
-      - debian
-      - debian_like
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: debian12
-    box: debian/bookworm64
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: ubuntu1804
-    box: generic/ubuntu1804
-    groups:
-      - debian_like
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: ubuntu2004
-    box: generic/ubuntu2004
-    groups:
-      - debian_like
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: ubuntu2204
-    box: generic/ubuntu2204
-    groups:
-      - debian_like
-    memory: 4096
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: ubuntu2310
-    box: generic/ubuntu2310
-    groups:
-      - debian_like
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-
-  # RedHat like
-  - name: centos7
-    box: centos/7
-    groups:
-      - redhat_like
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: alma8
-    box: almalinux/8
-    groups:
-      - redhat_like
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: alma9
-    box: almalinux/9
-    groups:
-      - redhat_like
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-lint: ansible-lint
-provisioner:
-  name: ansible
-  inventory:
-    links:
-      group_vars: inventory/group_vars
-      host_vars: inventory/host_vars
-verifier:
-  name: ansible
+../default/molecule.yml
