--- a/tasks/package-managers/portage/update.yml
+++ b/tasks/package-managers/portage/update.yml
@@ -6,7 +6,8 @@
 - name: Portage - Cache update
   when: system_cache_needs_update
   become: true
-  block:
-    - name: Portage - Cache update
-      community.general.portage:
-        sync: true
+  community.general.portage:
+    sync: true
+  register: result
+  until: result.failed == false
+  retries: "{{ system_retries }}"
