--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -34,3 +34,9 @@
       become: true
       ansible.builtin.package:
         name: vim
+
+    - name: EPEL should be absent
+      check_mode: true
+      ansible.builtin.file:
+        path: /etc/yum.repos.d/epel.repo
+        state: absent
