--- a/molecule/desktops/molecule.yml
+++ b/molecule/desktops/molecule.yml
@@ -1,72 +1,1 @@
----
-dependency:
-  name: galaxy
-driver:
-  name: vagrant
-  provider:
-    name: libvirt
-  provision: true
-platforms:
-  - name: archlinux
-    box: archlinux/archlinux
-    interfaces: &interfaces
-      - auto_config: false
-        network_name: private_network
-        type: dhcp
-    provider_raw_config_args: &provider
-      - "cpu_mode = 'host-passthrough'"
-      - "disk_bus = 'virtio'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args:
-      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
-      - 'vm.disk :disk, size: "1GB", name: "vdb"'
-  - name: gentoo
-    box: generic/gentoo
-    cpus: 4
-    memory: 8192
-    interfaces: *interfaces
-    provider_raw_config_args:
-      - "cpu_mode = 'host-passthrough'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args: &instance
-      - 'vm.disk :disk, size: "1GB", name: "vdb"'
-
-  # Debian like
-  - name: bookworm
-    box: debian/bookworm64
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: noble
-    box: generic/ubuntu2404
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-
-  # RedHat like
-  - name: centos9s
-    box: generic/centos9s
-    memory: 2048
-    interfaces: *interfaces
-    provider_raw_config_args: *provider
-    instance_raw_config_args: *instance
-  - name: fedora40
-    box: fedora/40-cloud-base
-    memory: 2048
-    provider_raw_config_args: *provider
-lint: ansible-lint
-provisioner:
-  name: ansible
-  inventory:
-    links:
-      group_vars: inventory/group_vars
-      host_vars: inventory/host_vars
-verifier:
-  name: ansible
+../servers/molecule.yml
