--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -5,17 +5,25 @@
     name: "{{ system_hostname }}"
   notify: restart hostname
 
-- name: Hosts - OpenRC configuration
-  when: ansible_service_mgr == "openrc"
+- name: Hosts - Fix localhost fqdn detection
+  when: network_backend_name == "networkd"
+  become: true
+  ansible.builtin.lineinfile:
+    path: /etc/nsswitch.conf
+    line: "hosts: mymachines files resolve [!UNAVAIL=return] myhostname dns"
+    regexp: "^hosts:"
+
+- name: Hosts - Netifrc configuration
+  when: network_backend_name == "netifrc"
   become: true
   notify: restart hostname
   block:
-    - name: Hosts - OpenRC - Remove /etc/hostname
+    - name: Hosts - Netifrc - Remove /etc/hostname
       ansible.builtin.file:
         path: /etc/hostname
         state: absent
 
-    - name: Hosts - OpenRC - Domain name
+    - name: Hosts - Netifrc - Domain name
       when: system_domain is defined
       ansible.builtin.lineinfile:
         path: /etc/conf.d/net
@@ -26,7 +34,6 @@
         mode: "0644"
 
 - name: /etc/hosts
-  when: system_hosts | length > 0
   vars:
     local_hostnames: |
       {{
