--- a/molecule/gnome/molecule.yml
+++ b/molecule/gnome/molecule.yml
@@ -1,1 +1,56 @@
-../desktops/molecule.yml
+---
+dependency:
+  name: galaxy
+driver:
+  name: vagrant
+  provider:
+    name: libvirt
+  provision: true
+platforms:
+  - name: archlinux
+    box: archlinux/archlinux
+    memory: 2048
+    provider_raw_config_args: &provider_raw_config
+      - "cpu_mode = 'host-passthrough'"
+      - "disk_bus = 'virtio'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
+  - name: gentoo
+    box: generic/gentoo
+    cpus: 4
+    memory: 8192
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+
+  # Debian like
+  - name: bookworm
+    box: debian/bookworm64
+    memory: 2048
+    provider_raw_config_args: *provider_raw_config
+  - name: noble
+    box: generic/ubuntu2404
+    memory: 2048
+    provider_raw_config_args: *provider_raw_config
+
+  # RedHat like
+  - name: centos9s
+    box: generic/centos9s
+    memory: 2048
+    provider_raw_config_args: *provider_raw_config
+  - name: fedora40
+    box: fedora/40-cloud-base
+    memory: 2048
+    provider_raw_config_args: *provider_raw_config
+lint: ansible-lint
+provisioner:
+  name: ansible
+verifier:
+  name: ansible
