--- a/molecule/servers/inventory/host_vars/trixie.yml
+++ b/molecule/servers/inventory/host_vars/trixie.yml
@@ -1,11 +1,11 @@
 ---
 system_networks_interfaces:
-  - name: ens6
+  - name: eth0
     description: Public network
     bootproto: dhcp
-  - name: ens7
+  - name: eth1
     description: Private network
     bootproto: static
-    ip: 192.168.250.10/24
+    ip: 192.168.250.33/24
     routes:
       - network: 192.168.250.0/24
