--- a/molecule/servers/molecule.yml
+++ b/molecule/servers/molecule.yml
@@ -29,7 +29,7 @@ platforms:
       - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
 
   - name: gentoo
-    box: generic/gentoo
+    box: generic-x64/gentoo
     cpus: 4
     memory: 8192
     interfaces: *interfaces
@@ -97,7 +97,7 @@ platforms:
 
   # RedHat like
   - name: centos9s
-    box: centos/stream9
+    box: generic-x64/centos9s
     groups:
       - redhat_like
     memory: 2048
@@ -105,7 +105,7 @@ platforms:
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
   - name: alma9
-    box: almalinux/9
+    box: generic-x64/alma9
     groups:
       - redhat_like
     memory: 2048
