--- a/tasks/networks.yml
+++ b/tasks/networks.yml
@@ -1,7 +1,7 @@
 ---
 - name: Networks - Load variables
   when: network_backend is undefined
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Networks - IPv6 support
   become: true
@@ -18,7 +18,7 @@
   block:
     - name: Networks - Prune unmanaged interfaces
       when: system_networks_interfaces_prune
-      ansible.builtin.import_tasks: "{{ role_path }}/tasks/networks/prune.yml"
+      ansible.builtin.include_tasks: "{{ role_path }}/tasks/networks/prune.yml"
 
     - name: Networks - Distribution rules
       ansible.builtin.include_tasks:
@@ -32,7 +32,7 @@
 
     - name: Networks - Interfaces configuration from template
       when: network_backend.template is defined
-      ansible.builtin.import_tasks: "{{ role_path }}/tasks/networks/template.yml"
+      ansible.builtin.include_tasks: "{{ role_path }}/tasks/networks/template.yml"
 
 - name: Networks - Changes take effects immediately
   ansible.builtin.meta: flush_handlers
