--- a/tasks/package-managers/pacman/update.yml
+++ b/tasks/package-managers/pacman/update.yml
@@ -1,6 +1,6 @@
 ---
 - name: Pacman - Needs update
-  ansible.builtin.import_tasks:
+  ansible.builtin.include_tasks:
     file: "{{ role_path }}/tasks/package-managers/needs-update.yml"
 
 - name: Pacman - Cache update
@@ -14,5 +14,5 @@
 
 - name: Pacman - Yay
   when: system_pacman_aur
-  ansible.builtin.import_tasks:
+  ansible.builtin.include_tasks:
     file: "{{ role_path }}/tasks/package-managers/pacman/yay.yml"
