--- a/tasks/package-managers/portage/make.conf.yml
+++ b/tasks/package-managers/portage/make.conf.yml
@@ -1,6 +1,6 @@
 ---
 - name: Portage - Equery
-  ansible.builtin.import_tasks:
+  ansible.builtin.include_tasks:
     file: "{{ role_path }}/tasks/package-managers/portage/equery.yml"
 
 - name: Portage - make.conf - Git package
