--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,13 +1,13 @@
 ---
 - name: Packages - Load facts
   when: system_packages is undefined
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Packages - Before install
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/packages/before-install.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/packages/before-install.yml"
 
 - name: Packages - Install
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/packages/install.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/packages/install.yml"
 
 - name: Packages - After install
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/packages/after-install.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/packages/after-install.yml"
