--- a/tasks/time.yml
+++ b/tasks/time.yml
@@ -1,7 +1,7 @@
 ---
 - name: Time - Load variables
   when: system_services is undefined
-  ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Time - Zone
   when: system_time_zone is defined
